<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.MainActivity">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="List of Cities"
                android:textSize="30dp" />

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="559dp"
                android:layout_weight="1"
                android:drawSelectorOnTop="false" />

            <Button
                android:id="@+id/buttonWeather"
                android:layout_width="419dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/listView"
                android:text="View Weather" />

            <Button
                android:id="@+id/buttonMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonWeather"
                android:text="View Map" />


            <Button
                android:id="@+id/buttonAddLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add a location" />

            <Button
                android:id="@+id/buttonRemoveLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Remove a location" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/citiesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>